--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Halaman Pertama</title>
+    <title>Week 3 Challange</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   
   </head>
 
@@ -105,10 +107,9 @@
 <!-- Features Start -->
 <div class="feature">
 
-<div class="container">
+<div class="w-container">
   <div class="row">
     <div class="col-sm">
-      One of three columns
     </div>
     <div class="col-sm" style="margin:100px">
       <p>What's So special?</p>
@@ -147,7 +148,6 @@
 
       </div>
       <div class="col-sm">
-        One of three columns
             <div class="row"> 
               <div class="col align-self-end"> 
                 <div class="card" style="width: 18rem; height: auto; margin: 10px; background-color: lightgray;">
